CS-profile image and edit icon alignment fixed

--- a/src/pages/profile/components/profile-image/profile-image.module.scss
+++ b/src/pages/profile/components/profile-image/profile-image.module.scss
@@ -1,8 +1,7 @@
 .profileImageDetailsContainer {
   .profileImage {
     border-radius: 50%;
-    width: 110px;
-    margin: auto;
+    width: 100%;
     display: flex;
   }
 }
